samples/_failures_safe/1761615262_b61d9d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_83e8c29e.c: In function ‘parser_advance’:
./samples/SAFE/__tmp_83e8c29e.c:158:5: error: expected identifier at end of input
  158 |     if (parser == NULL || parser->
      |     ^~
./samples/SAFE/__tmp_83e8c29e.c:158:5: error: expected declaration or statement at end of input
